--- a/src/main/resources/templates/appointment_list.html
+++ b/src/main/resources/templates/appointment_list.html
@@ -31,7 +31,6 @@
 </head>
 <body>
 <div th:fragment="listFragment">
-  <button class="update-all-btn" id="updateAllBtn">수정</button>
   <table>
     <thead>
     <tr>
@@ -70,6 +69,9 @@
         </label>
       </td>
       <td th:text="${appointment.remarks}"></td>
+      <td>
+        <button class="update-status-btn" th:data-id="${appointment.appointmentId}">수정</button>
+      </td>
     </tr>
     </tbody>
   </table>
