--- a/src/main/resources/templates/nurse.html
+++ b/src/main/resources/templates/nurse.html
@@ -90,7 +90,7 @@
             <div class="modal-content">
                 <span class="close" id="closeCalendarEventModal">&times;</span>
                 <h3 id="calendarEventModalTitle">일정 추가</h3>
-                <p id="selectedDateDisplay"></p>
+                <p id="selectedDateDisplay" style="font-weight: bold;"></p>
                 <form id="calendarEventForm">
                     <label for="eventTitleInput">제목:</label>
                     <input type="text" id="eventTitleInput" name="eventTitle" required>
